--- a/TubeCube/Resources/Styles/Styles.xaml
+++ b/TubeCube/Resources/Styles/Styles.xaml
@@ -45,4 +45,15 @@
         <Setter Property="SelectionMode" Value="None"/>
     </Style>
 
+    <Style TargetType="Label" x:Key="BaseRegularLightLabelTextStyle">
+        <Setter Property="LineBreakMode" Value="TailTruncation"/>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
+        <Setter Property="FontFamily" Value="RegularFont"/>
+        <Setter Property="TextColor" Value="{StaticResource LightTextColor}"/>
+    </Style>
+
+    <Style TargetType="Label" BasedOn="{StaticResource BaseRegularLightLabelTextStyle}" x:Key="BaseMediumLightLabelTextStyle">
+        <Setter Property="FontFamily" Value="MediumFont" />
+    </Style>
+
 </ResourceDictionary>
