--- a/TubeCube/Resources/Styles/Styles.xaml
+++ b/TubeCube/Resources/Styles/Styles.xaml
@@ -56,4 +56,30 @@
         <Setter Property="FontFamily" Value="MediumFont" />
     </Style>
 
+    <Style TargetType="ImageButton" x:Key="IconButtonStyle">
+        <Setter Property="HeightRequest" Value="32"/>
+        <Setter Property="WidthRequest" Value="32"/>
+        <Setter Property="Padding" Value="{OnPlatform Android=4, Default=6}"/>
+        <Setter Property="BackgroundColor" Value="Transparent"/>
+        <Setter Property="Margin" Value="12,3"/>
+        <Setter Property="Aspect" Value="AspectFit"/>
+        <Setter Property="CornerRadius" Value="8"/>
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal">
+                        <VisualState.Setters>
+                            <Setter Property="Opacity" Value="1"/>
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
