--- a/TubeCube/Views/StartPage.xaml
+++ b/TubeCube/Views/StartPage.xaml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<views:ViewBase xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:views="clr-namespace:TubeCube.Views"
+             xmlns:viewModels="clr-namespace:TubeCube.ViewModels"
+             x:DataType="viewModels:StartPageViewModel"
              x:Class="TubeCube.StartPage"
-             Title="StartPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+             PageTitle="{Binding Title}"
+             x:TypeArguments="viewModels:StartPageViewModel"
+             PageMode="Menu"
+             ContentDisplayMode="NavigationBar">
+    
+    <views:ViewBase.PageIcons>
+        <ImageButton
+            Style="{StaticResource IconButtonStyle}"
+            Source="icnsettings.png"/>
+    </views:ViewBase.PageIcons>
+
+    <views:ViewBase.PageContent>
+        
+    </views:ViewBase.PageContent>
+</views:ViewBase>
